# Librarian

./: .gitignore  Cargo.toml  README.md  Untitled Diagram.drawio  build.sbt  docker-compose.yaml
client/: go.mod  minio.go
cmd/client/: cli.go  env.go  go.mod  go.sum  main.go  minio.go
cmd/ocr/: build.sbt  cli.go  elastic.go  go.mod  go.sum  main.go  ocr.go  ocr_wrapper.go  pdf.go
cmd/ocr/src/main/scala/com/librarian/ocr/: ElasticsearchClient.scala  OCRUtil.scala  TextUploader.scala
cmd/ocr/src/resources/: application.conf
cmd/ocr/tesseract/: Makefile  ocr.cpp
example/: minio.rs  ocr.rs
infrastructure/provider/local/: kind.sh
ocr/: requirements.txt
ocr/src/ocr/: __main__.py
ocr/src/ocr/functions/ocr_image_text_extract/: __main__.py
ocr/src/ocr/functions/ocr_text_extract/: __main__.py
ocr/src/ocr/lib/: minio  minio.py  ocr.py
ocr/src/ocr/lib/clients/: minio.py
ocr/src/ocr/lib/ocr/: ocr_image.py
ocr/src/ocr/lib/utils/: env_util.py
ocr/src/resources/: config.yaml
ocr/src/resources/man/: ocr_cli_man.txt
src/: main.rs
src/env/: env.go  go.mod
src/main/scala/: ElasticSearchETL.scala  main.scala
src/resources/: application.conf
