[package]
name = "etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.5.0-alpha.1"
tokio = { version = "*", features = ["full"] }
rust-s3 = "0.33.0"
pdf-extract = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
